--- a/src/App.css
+++ b/src/App.css
@@ -24,14 +24,38 @@
     color: #fff;
     font-size: 100px;
   }
+  @media screen and (max-width: 960px) {
+    .services {
+        font-size: 75px;
+    }
+  } 
+
+  @media screen and (max-width: 768px) {
+    .services {
+      font-size: 50px;
+      margin-top: -100px;
+    }
+  }
 
   .about {
     background-image: url('/src/images/img-3.jpg');
     background-position: center;
-    background-size: fill;
+    background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
     font-size: 100px;
+  }
+  @media screen and (max-width: 960px) {
+    .about {
+        font-size: 75px;
+    }
+  } 
+
+  @media screen and (max-width: 768px) {
+    .about {
+      font-size: 50px;
+      margin-top: -100px;
+    }
   }
 
   .sign-up {
@@ -41,4 +65,16 @@
     background-repeat: no-repeat;
     color: #fff;
     font-size: 100px;
+  }
+  @media screen and (max-width: 960px) {
+    .sign-up {
+        font-size: 75px;
+    }
+  } 
+
+  @media screen and (max-width: 768px) {
+    .sign-up {
+      font-size: 50px;
+      margin-top: -100px;
+    }
   }
